# mao-testing-research

./: .claudeignore  .env.example  .gitattributes  .gitguardian.yml  .gitignore  .plan-mode-response.md  .pre-commit-config.yaml  .vercelignore  AGENT_FRAMEWORK_DEFINITIONS.md  AI_AGENT_TESTING_DEEP_RESEARCH_V2.md  AUTOMATED_TESTING_SETUP.md  CLAUDE.md  CLAUDE_SKILLS_VS_MAO_COMPARISON.md  COMPETITIVE_ANALYSIS.md  COMPLETE_VERIFICATION_REPORT.md  CONTRIBUTING.md  CONVERSATION_TRACE_IMPLEMENTATION_PLAN.md  DEEP_DIVE_TWO_OPPORTUNITIES.md  DEPLOYMENT_STATUS.md  DETECTION_ACCURACY_STATUS.md  DETECTOR_TESTING_RESULTS.md  DIAGNOSTIC.md  EVERYTHING_FIXED.md  FRONTEND_BACKEND_VERIFICATION.md  GOLDEN_DATASET_FULL.md  GOLDEN_DATA_GENERATION.md  GOOGLE_OAUTH_MIGRATION.md  GOOGLE_OAUTH_SUCCESS.md  LICENSE  MAO_SKILLS_STRATEGY.md  MAO_TESTING_EXECUTION_PLAN.md  MAO_TESTING_EXPERT_CURRICULUM.md  MOLTBOT_INTEGRATION_GUIDE.md  OAUTH_CONSENT_FIX_REQUIRED.md  OAUTH_SETUP_INSTRUCTIONS.md  PHASE_1_2_PROGRESS.md  QUICK_VERIFICATION.md  README.md  TESTING_PLAN.md  VERIFICATION_COMPLETE.md  (+22 more)
.claude/: settings.json
_archived/mao/: README.md  __init__.py  pyproject.toml
_archived/mao/cli/: config.py  output.py
_archived/mao/core/: __init__.py
_archived/mao/mcp/: __init__.py  server.py
_archived/mao/tests/: test_mcp.py  test_security.py
_archived/sdk/: README.md  pyproject.toml
_archived/sdk/mao_testing/: __init__.py  span.py  tracer.py
_archived/sdk/mao_testing/integrations/: autogen.py  crewai.py  langgraph.py
_archived/sdk/tests/: test_config.py  test_integration.py  test_span.py  test_tracer.py
backend/: .coverage.Tuomos-MacBook-Pro.local.83733.XahfGjBx  .dockerignore  .env.development  .env.example  .env.production  .env.staging  .env.test  .gitignore  BORDERLINE_CASES_RESULTS.md  DETECTOR_TUNING_REVIEW.md  Dockerfile  FINAL_RESULTS.md  FLYIO_DEPLOYMENT.md  MAST_FINAL_RESULTS.md  MAST_IMPLEMENTATION_RESULTS.md  MAST_TEST_SUMMARY.md  MAST_TUNING_STATUS.md  MODEL_CONFIG_TEST_RESULTS.md  MULTI_PROVIDER_INTEGRATION_PLAN.md  N8N_CONVERTER_TEST_RESULTS.md  N8N_DATA_SUMMARY.md  N8N_PISAMA_COMPATIBILITY.md  N8N_TO_OTEL_GUIDE.md  OTEL_VS_N8N_COMPARISON.md  PHASE5_SUMMARY.md  REALISTIC_TESTING_FIXES.md  alembic.ini  fly.toml  improved_benchmark_report.md  mast_benchmark_improved.md  mast_benchmark_ml_report.md  mast_benchmark_phase2.md  mast_benchmark_report.md  pytest.ini  quality_report.json  requirements-ci.txt  requirements-prod.txt  requirements.txt  run_quality_assessment.py  test_all_workflows.py  (+7 more)
benchmarks/: DETECTION_REPORT.md  N8N_DETECTOR_ACCURACY.md  README.md  REALISTIC_TESTING_STATUS.md  conftest.py  main.py  modal_benchmark.py  n8n_detector_results.json  pyproject.toml
cli/: README.md  __init__.py  config.py  main.py  pyproject.toml  server.py
cli/commands/: __init__.py  detect.py  import_cmd.py  quality.py
curriculum/: day8-enterprise-pain-points.md  day9-competitive-landscape.md
curriculum-deep/: README.md
data/: mast_data.json
day1-langgraph/: requirements.txt
demo-agent/: README.md  langgraph_demo.py  n8n_demo.py  requirements.txt
docs/: API_REFERENCE.md  CAPABILITIES.md  CLERK_INTEGRATION_PLAN.md  CLI_MCP_IMPLEMENTATION_PLAN.md  COMPETITIVE_LANDSCAPE_MATRIX.md  DEMO_SCRIPTS.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  DETECTION_PRINCIPLES.md  E2E_TESTING_IMPLEMENTATION_PLAN.md  E2E_TESTING_STRATEGY.md  EVAL_OBSERVABILITY.md  EXECUTION_PLAN_AGENT_FORENSICS.md  FAILURE_MODE_ONBOARDING.md  FEATURE_MATRIX.md  GETTING_STARTED.md  HISTORICAL_REPLAY_PLAN.md  INTEGRATION_IMPLEMENTATION_PLAN.md  INTEGRATION_METHODS.md  LOWCODE_ORCHESTRATORS_ANALYSIS.md  MAST_BENCHMARK_RESEARCH_SYNTHESIS.md  N8N_INTEGRATION_PLAN.md  PISAMA_CLAUDE_CODE_PLAN.md  PISAMA_COMPETITIVE_INTELLIGENCE_2026.md  PIVOT_STRATEGY_AGENT_FORENSICS.md  STATE_OF_THE_ART_DETECTOR_DESIGN.md  TECHNICAL_ARCHITECTURE.md  competitive-analysis-2025.md  failure-modes-reference.md  launch-tracker.md  pricing-tiers.md  product-plan-icp-alignment.md  revenue-model-2026.md  skill-review-findings-2025-01-05.md
docs-internal/: ACQUISITION_THREAT_ANALYSIS.md  COMPETITIVE_ANALYSIS.md  icp-buyer-personas.md
docs-site/: mkdocs.yml  requirements.txt  vercel.json
frontend/: .dockerignore  .env.development  .env.local.example  .env.production  .env.staging  .env.test  .gitignore  COMPLETE_FIX_SUMMARY.md  Dockerfile  FIXES_APPLIED.md  TEST_RESULTS_SUMMARY.md  UX_AUDIT_REPORT.md  components.json  eslint.config.mjs  evaluate-designs.ts  next.config.js  package-lock.json  package.json  (+4 more)
(+1835 files in other folders)
