[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mao-healer"
version = "0.1.0"
description = "Self-healing agent for n8n workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "MAO Testing", email = "info@mao-testing.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mao-healer = "cli.main:main"

[project.urls]
Homepage = "https://github.com/your-org/mao-healer"
Documentation = "https://github.com/your-org/mao-healer#readme"
Repository = "https://github.com/your-org/mao-healer"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]

[tool.setuptools.package-data]
cli = ["py.typed"]
